# stm32f40x-hal

./: Cargo.toml
src/: delay.rs  flash.rs  gpio.rs  i2c.rs  lib.rs  prelude.rs  rcc.rs  serial.rs  spi.rs  time.rs  timer.rs
